Updates for 1.3.1 release

--- a/fusepb/resources/Fuse Help/html/changelog.html
+++ b/fusepb/resources/Fuse Help/html/changelog.html
@@ -12,6 +12,36 @@
       <!-- AppleSegStart="What's New In Fuse?" --><a name="What's New In
         Fuse?" id="What's New In Fuse?"></a><!-- AppleSegDescription="This section describes the changes for version 1.2.1 of the Fuse emulator." --></font><br>
     <h2><font><font face="Lucida Grande,Helvetica,Arial">What's new in
+          Fuse For Mac OS X 1.3.1</font></font></h2>
+    <ul>
+      <li><font face="Lucida Grande,Helvetica,Arial">Emulation core
+          improvements:</font></li>
+      <li style="list-style-type: none; list-style-image: none;
+        list-style-position: outside;">
+        <ul>
+          <li><font face="Lucida Grande,Helvetica,Arial">Warn on
+              inserting a disk image larger than the emulated drive
+              (thanks, Stefano Bodrato) (Fredrick Meunier).</font></li>
+        </ul>
+      </li>
+      <li style="list-style-type: none; list-style-image: none;
+        list-style-position: outside;"><br>
+      </li>
+      <li><font face="Lucida Grande,Helvetica,Arial"><font face="Lucida
+            Grande,Helvetica,Arial">Miscellaneous improvements:</font></font></li>
+      <li style="list-style-type: none; list-style-image: none;
+        list-style-position: outside;">
+        <ul>
+          <li><font face="Lucida Grande,Helvetica,Arial">Fix Recreated
+              ZX Spectrum Bluetooth keyboard support on the Mac (thanks,
+              Allan Høiberg and Jason Hudson) (Fredrick Meunier).</font></li>
+        </ul>
+        <br>
+      </li>
+      <li><font face="Lucida Grande,Helvetica,Arial"><font face="Lucida
+            Grande,Helvetica,Arial">Various other minor bugfixes.</font></font></li>
+    </ul>
+    <h2><font><font face="Lucida Grande,Helvetica,Arial">What's new in
           Fuse For Mac OS X 1.3.0</font></font></h2>
     <ul>
       <li><font face="Lucida Grande,Helvetica,Arial"><font face="Lucida
