Rebrand as Fuse for macOS

--- a/fusepb/Credits.html
+++ b/fusepb/Credits.html
@@ -9,7 +9,7 @@
     <p class="MsoNormal"><span style="font-family: Helvetica;"
         lang="EN-US">Fuse
         for
-        Mac OS X has a home page at:</span></p>
+        macOS has a home page at:</span></p>
     <p class="MsoNormal"><span style="font-family: Helvetica;"
         lang="EN-US"><a href="http://fuse-for-macosx.sourceforge.net/">http://fuse-for-macosx.sourceforge.net/</a><br>
       </span><br>
@@ -18,7 +18,7 @@
         bug reports, suggestions or the like for Fuse, or
         just want to get involved in the development, this is
         coordinated via
-        the Fuse for Mac OS X project page on SourceForge,<br>
+        the Fuse for macOS project page on SourceForge,<br>
         <a href="http://sourceforge.net/projects/fuse-for-macosx/">http://sourceforge.net/projects/fuse-for-macosx/</a><br>
         <br>
         If you're interested in more general Speccy related discussions,
