Move the Recreated ZX Spectrum keyboard option
to the Machine menu.

--- a/fusepb/resources/Fuse Help/html/changelog.html
+++ b/fusepb/resources/Fuse Help/html/changelog.html
@@ -12,7 +12,7 @@
       <!-- AppleSegStart="What's New In Fuse?" --><a name="What's New In
         Fuse?" id="What's New In Fuse?"></a><!-- AppleSegDescription="This section describes the changes for version 1.2.1 of the Fuse emulator." --></font><br>
     <h2><font><font face="Lucida Grande,Helvetica,Arial">What's new in
-          Fuse For Mac OS X 1.3.1</font></font></h2>
+          Fuse For macOS 1.3.1</font></font></h2>
     <ul>
       <li><font face="Lucida Grande,Helvetica,Arial">Emulation core
           improvements:</font></li>
@@ -32,9 +32,13 @@
       <li style="list-style-type: none; list-style-image: none;
         list-style-position: outside;">
         <ul>
-          <li><font face="Lucida Grande,Helvetica,Arial">Fix Recreated
-              ZX Spectrum Bluetooth keyboard support on the Mac (thanks,
-              Allan Høiberg and Jason Hudson) (Fredrick Meunier).</font></li>
+          <li><font face="Lucida Grande,Helvetica,Arial">Fix the
+              Recreated ZX Spectrum Bluetooth keyboard support on the
+              Mac (thanks, Allan Høiberg and Jason Hudson) (Fredrick
+              Meunier).</font></li>
+          <li><font face="Lucida Grande,Helvetica,Arial">Moved the
+              Recreated ZX Spectrum Bluetooth keyboard option to the
+              Machine menu (Fredrick Meunier).</font></li>
         </ul>
         <br>
       </li>
