--- a/fusepb/resources/Fuse Help/html/menus.html
+++ b/fusepb/resources/Fuse Help/html/menus.html
@@ -332,8 +332,6 @@
               Grande,Helvetica,Arial"> and </font><a
               href="disciple.html"><font face="Lucida
                 Grande,Helvetica,Arial"><span class="emphasis"><em>DISCIPLE
-
-
                     Emulation</em></span></font></a><font face="Lucida
               Grande,Helvetica,Arial"> sections for more information).
               For the DISCiPLE, Caps Shift must be held down whilst
@@ -348,7 +346,6 @@
                 face="Lucida Grande,Helvetica,Arial"><em><span
                     class="emphasis"><font face="Lucida
                       Grande,Helvetica,Arial"><em>Machine &gt; </em></font></span>Didaktik
-
                   SNAP</em></font></span></td>
           <td style="vertical-align: top;"><br>
           </td>
@@ -380,6 +377,23 @@
         </tr>
         <tr>
           <td style="vertical-align: top;"><span class="emphasis"><font
+                face="Lucida Grande,Helvetica,Arial"><em> Machine &gt;
+                  Use Recreated ZX Spectrum keyboard</em> </font></span>
+          </td>
+          <td valign="top"><span class="emphasis"><font face="Lucida
+                Grande,Helvetica,Arial"><em>&#8984;-R</em></font></span></td>
+          <td valign="top"><font face="Lucida Grande,Helvetica,Arial"><font
+                face="Lucida Grande,Helvetica,Arial">Enable the use of a
+                Recreated ZX Spectrum in game mode. This is a Bluetooth
+                keyboard in the shape of a 48K ZX Spectrum that can be
+                paired your Mac to give an authentic feeling of using a
+                real ZX Spectrum. While this mode is enabled, your Mac
+                keyboard will not give correct input to the emulator.</font></font><font
+              face="Lucida Grande,Helvetica,Arial"> This setting can be
+              toggled with <span class="emphasis"><em>&#8984;-R</em></span>.</font></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><span class="emphasis"><font
                 face="Lucida Grande,Helvetica,Arial"><em>Media &gt;</em></font></span>
             <span class="emphasis"><font face="Lucida
                 Grande,Helvetica,Arial"><em>Tape &gt; Open…</em></font></span></td>
@@ -391,9 +405,6 @@
                   class="emphasis"><em>Auto-load tapes/disks</em></span>
                 is set in the </font><font face="Lucida
                 Grande,Helvetica,Arial"><span class="emphasis"><em>Preferences,
-
-
-
                     General</em></span></font><font face="Lucida
                 Grande,Helvetica,Arial"> dialog (as it is by default),
                 the tape will begin loading. Otherwise, you have to
@@ -492,9 +503,6 @@
               contents to a TZX file. The virtual-tape contents are the
               contents of the previously-loaded tape (if any has been
               loaded since you last did a <span class="emphasis"><em>Tape,
-
-
-
                   Close</em></span>), followed by anything you've saved
               from the emulated machine since. These newly-saved files
               are <span class="emphasis"><em>not</em></span> written to
@@ -856,8 +864,6 @@
                 hard disk from the current IDE interface's master
                 channel. Note that any writes to the virtual hard disk
                 will be lost unless the <span class="emphasis"><em>Media,
-
-
                     IDE Master, Commit</em></span> option is used before
                 the disk is ejected.</font></span></td>
         </tr>
