Update Fuse for macOS homepage URL

--- a/fusepb/Credits.html
+++ b/fusepb/Credits.html
@@ -11,7 +11,7 @@
         for
         macOS has a home page at:</span></p>
     <p class="MsoNormal"><span style="font-family: Helvetica;"
-        lang="EN-US"><a href="http://fuse-for-macosx.sourceforge.net/">http://fuse-for-macosx.sourceforge.net/</a><br>
+        lang="EN-US"><a href="https://fuse-for-macosx.sourceforge.io">https://fuse-for-macosx.sourceforge.io</a><br>
       </span><br>
       <span style="font-family: Helvetica;" lang="EN-US">If you've got
         any
