--- a/fusepb/Credits.html
+++ b/fusepb/Credits.html
@@ -6,8 +6,15 @@
     <title>Fuse credits</title>
   </head>
   <body>
+   <p class="MsoNormal"><span style="font-family: Helvetica;"
+        lang="EN-US">FuseX
+        fork
+        macOS has a home page at:</span></p>
     <p class="MsoNormal"><span style="font-family: Helvetica;"
-        lang="EN-US">Fuse
+        lang="EN-US"><a href="https://speccytools.org">https://speccytools.org</a><br>
+      </span><br>
+    <p class="MsoNormal"><span style="font-family: Helvetica;"
+        lang="EN-US">Original fuse
         for
         macOS has a home page at:</span></p>
     <p class="MsoNormal"><span style="font-family: Helvetica;"
